--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar scroll</a>
+            <a class="navbar-brand" href="#">MotoPrime</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                 aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -20,32 +20,32 @@
             <div class="collapse navbar-collapse" id="navbarScroll">
                 <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#sobre">Sobre</a>
+                        <a class="nav-link active" aria-current="page" href="#sobre">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">Contato</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            Link
+                            Sobre
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Ano</a></li>
+                            <li><a class="dropdown-item" href="#">Marca</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#">Modelo</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" aria-disabled="true">Link</a>
+                        <a class="nav-link disabled" aria-disabled="true"></a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                <form class="d-flex" role="Pesquise">
+                    <input class="form-control me-2" type="Pesquise" placeholder="Pesquise" aria-label="Pesquise">
+                    <button class="btn btn-outline-success" type="Pesquise">Pesquise</button>
                 </form>
             </div>
         </div>
@@ -53,13 +53,13 @@
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/1.jpeg" class="d-block w-100" alt="...">
+                <img src="Img/img3.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/2.jpeg" class="d-block w-100" alt="...">
+                <img src="Img/img2.jpg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/3.jpeg" class="d-block w-100" alt="...">
+                <img src="Img/img1.jpg" class="d-block w-100" alt="...">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -71,40 +71,39 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <br><br>
     <section id= "sobre">
         <div class="container">
-        <h1 class="text container">Sobre mim</h1>
+        <h1 class="text container">Destaques</h1> 
         <br><br>
         <div class="container text-center">
             <div class="row">
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="Img/yamaha-mt-09.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">MT-09</h5>
+                          <p class="card-text">A Yamaha MT-09 traz um conceito radical em design e performance. O motor de 3 cilindros é capaz de gerar um torque brutal de 8,92 kgf. m. Esse modelo é leve, com peso de apenas 193 quilos, que dividido pelos 115 cv do motor, gera ótima relação peso e potência de 1,67 quilo por cv.</p>
+                          <a href="#" class="btn btn-primary">Ver</a>
                         </div>
                       </div>
                 </div>
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="Img/Triumph_Tiger_800XC.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Tiger 800</h5>
+                          <p class="card-text">A Tiger 800 é equipada com um motor tricilíndrico de 800 cc, capaz de entregar cerca de 95 cavalos de potência a 9.500 rpm e 79 Nm de torque a 8.050 rpm. Este motor oferece uma resposta suave e consistente, ideal tanto para estradas quanto para trilhas off-road, garantindo um equilíbrio perfeito entre potência e controle.</p>
+                          <a href="#" class="btn btn-primary">Ver</a>
                         </div>
                       </div>
                 </div>
                 <div class="col">
                     <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
+                        <img src="Img/595405438540118.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
+                          <h5 class="card-title">Hornet 2014</h5>
+                          <p class="card-text">A Hornet traz um motor de quatro cilindros em linha com 599 cm³ de capacidade. Tem linhas discretas e boa maneabilidade, além de ser fácil de conduzir. O propulsor possui duplo comando no cabeçote (DOHC) e refrigeração líquida. Produz 96,5 cv de potência máxima a 12.000 rpm e torque de 6,43 kgf.m a 9.500 rpm.</p>
+                          <a href="#" class="btn btn-primary">Ver</a>
                         </div>
                       </div>
                 </div>
